Bug 597268. Paint QuickDraw plugins differently to make them not flicker on scrolling. r=roc,josh a=b